--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
         "AppImage",
         "deb"
       ],
-      "icon": "assets/icons/fox-icon.png"
+      "icon": "assets/icons/fox-icon.ico"
     },
     "nsis": {
       "oneClick": false,
