Enhance Coqui TTS settings panel with improved styles and animations
- Updated background color and dimensions for the settings panel.
- Added new styles for Coqui TTS settings section, including headers and input fields.
- Introduced button styles with hover effects and loading animations.
- Implemented responsive adjustments for smaller screens.
- Enhanced visual feedback for buttons and status indicators.
- Added custom animations for success and error states.
- Improved scrollbar styling and checkbox design.
- Included Coqui branding colors and visual elements for a cohesive look.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "package-mac": "electron-builder build --mac",
     "package-linux": "electron-builder build --linux",
     "dev": "npm run build && npm start",
-    "download-whisper": "npx nodejs-whisper download base.en"
+    "download-whisper": "npx nodejs-whisper download base.en",
+    "setup-coqui": "pip install coqui-tts",
+    "download-coqui-model": "tts --model_name tts_models/multilingual/multi-dataset/xtts_v2 --text 'Hello world' --out_path temp.wav"
   },
   "build": {
     "appId": "com.foxassistant.app",
@@ -24,6 +26,7 @@
       "index.html",
       "styles.css",
       "assets/**/*",
+      "coqui-models/**/*",
       "node_modules/**/*",
       "!node_modules/*/{CHANGELOG.md,README.md,README,readme.md,readme}",
       "!node_modules/*/{test,__tests__,tests,powered-test,example,examples}",
