Refactor TTS integration: switch to web-based TTS service using Puppeteer, update settings UI, and remove unused voice selection

--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
     "package-mac": "electron-builder build --mac",
     "package-linux": "electron-builder build --linux",
     "dev": "npm run build && npm start",
-    "download-whisper": "npx nodejs-whisper download base.en",
-    "setup-coqui": "pip install coqui-tts",
-    "download-coqui-model": "tts --model_name tts_models/multilingual/multi-dataset/xtts_v2 --text 'Hello world' --out_path temp.wav"
+    "download-whisper": "npx nodejs-whisper download base.en"
   },
   "build": {
     "appId": "com.foxassistant.app",
@@ -26,7 +24,6 @@
       "index.html",
       "styles.css",
       "assets/**/*",
-      "coqui-models/**/*",
       "node_modules/**/*",
       "!node_modules/*/{CHANGELOG.md,README.md,README,readme.md,readme}",
       "!node_modules/*/{test,__tests__,tests,powered-test,example,examples}",
@@ -70,6 +67,7 @@
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
     "electron-store": "^8.2.0",
+    "puppeteer": "^21.0.0",
     "three": "^0.176.0"
   },
   "devDependencies": {
