Enhance TTS integration: update dependencies, refactor SpeechHandler for server-side processing, and implement Kokoro TTS API

--- a/package.json
+++ b/package.json
@@ -64,18 +64,22 @@
   "description": "",
   "dependencies": {
     "@types/three": "^0.176.0",
-    "axios": "^1.9.0",
     "dotenv": "^16.5.0",
     "electron-store": "^8.2.0",
-    "puppeteer": "^21.0.0",
     "three": "^0.176.0"
   },
   "devDependencies": {
     "@babel/core": "^7.27.1",
     "@babel/preset-env": "^7.27.2",
+    "axios": "^1.9.0",
     "babel-loader": "^10.0.0",
     "electron": "^36.2.1",
     "electron-builder": "^24.13.3",
+    "express": "^5.1.0",
+    "form-data": "^4.0.2",
+    "multer": "^2.0.0",
+    "openai": "^5.0.1",
+    "puppeteer": "^24.9.0",
     "webpack": "^5.99.8",
     "webpack-cli": "^5.1.4"
   }
