--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "src/main.js",
   "scripts": {
-    "start": "electron .",
+    "start": "concurrently \"electron .\" \"node server.js\"",
     "build": "webpack --config webpack.config.js",
     "watch": "webpack --watch --config webpack.config.js",
     "package": "electron-builder build --win",
@@ -22,6 +22,7 @@
       "dist/**/*",
       "src/**/*",
       "index.html",
+      "server.js",
       "styles.css",
       "assets/**/*",
       "node_modules/**/*",
@@ -73,6 +74,7 @@
     "@babel/preset-env": "^7.27.2",
     "axios": "^1.9.0",
     "babel-loader": "^10.0.0",
+    "concurrently": "^9.1.2",
     "electron": "^36.2.1",
     "electron-builder": "^24.13.3",
     "express": "^5.1.0",
